nyt-pod-scraper/editor-prompt-tool_eks-main/editor-prompt-tool/overlays/live/env.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  # namespace: nextjs
  name: editor-prompt-tool
spec:
  template:
    spec:
      containers:
        - name: editor-prompt-tool
