nyt-pod-scraper/editor-prompt-tool_eks-main/editor-prompt-tool/overlays/live/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: editor-prompt-tool
spec:
  ingressClassName: alb
  rules:
    - host:
      http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: editor-prompt-tool
                port:
                  number: 80
